- Fixed bug #52086 (No new line at the end of a included file crahes the PHP FPM daemon)